--- a/views/themes/default/index.jade
+++ b/views/themes/default/index.jade
@@ -26,10 +26,7 @@ block content
 	// .homepage-container
 	
 	footer
-		| Balloons.IO is an 
-		a(href='https://github.com/gravityonmars/Balloons.IO', target="_blank") Open Source project 
-		| developed by 
-		a(href='http://twitter.com/gravityonmars', target="_blank") Gravity On Mars.
+		| CodeKata.IO is an Angelhack project developed by Jason Goodwin, Bhavin Prajapati and Craig Mackenzie
 
 	// JavaScript at the bottom for fast page loading 
 
