--- a/views/themes/default/index.jade
+++ b/views/themes/default/index.jade
@@ -5,7 +5,7 @@ block content
 		.slideshow
 			#slideshow
 				.slide
-					h2 Realtime & Free
+					h2 Sharpen your skills and truly stand out!
 					.slide-image
 			// #slideshow
 			
