--- a/views/themes/default/room.jade
+++ b/views/themes/default/room.jade
@@ -56,6 +56,16 @@ block content
 				input.text(type='text', name='', placeholder="Your Message", value='')
 				// .chat-input
 
+		.content.code
+			.chat
+
+			.line-chat
+			.line-chat.second
+
+			.chat-input
+				input.text(type='text', name='', placeholder="Your Message", value='')
+				// .chat-input
+
 	// .wrap
 
 	span#room_name(style="display:none")= room.name
