--- a/views/themes/default/layout.jade
+++ b/views/themes/default/layout.jade
@@ -14,7 +14,7 @@ html(class="no-js", lang="en")
 		meta(too-sexy="true")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
 
-		title Balloons.IO
+		title code.kata.io
 
 		meta(name="description", content="")
 		meta(name="author", content="")
