Changed the UI to two sections

--- a/views/themes/default/room.jade
+++ b/views/themes/default/room.jade
@@ -58,13 +58,10 @@ block content
 
 		.content.code
 			.chat
-
-			.line-chat
-			.line-chat.second
+				textarea(rows='100%', cols='100%')
 
 			.chat-input
-				input.text(type='text', name='', placeholder="Your Message", value='')
-				// .chat-input
+				.button(margin='13px') Submit
 
 	// .wrap
 
