--- a/public/css/style.css
+++ b/public/css/style.css
@@ -932,6 +932,9 @@ p span.date {
   border-top: 1px solid #000;
   box-shadow: 0 0 0 1px rgba(255,255,255,0.1), 0 0 4px 2px rgba(0,0,0,0.35) inset;
 }
+.fancy-theme .chat-input .button{
+  margin: 13px;
+}
 .fancy-theme .chat-input input.text {
   border-color: #000;
 }
