--- a/views/themes/default/room.jade
+++ b/views/themes/default/room.jade
@@ -58,6 +58,9 @@ block content
 
 		.content.code
 			.chat
+				.problem
+					| Problem 1
+					| Reverse a string!!
 				textarea(rows='100%', cols='100%')
 
 			.chat-input
