--- a/views/themes/default/room_list.jade
+++ b/views/themes/default/room_list.jade
@@ -34,10 +34,7 @@ block content
 
 
 	footer
-		| Balloons.IO is an 
-		a(href='https://github.com/gravityonmars/Balloons.IO', target="_blank") Open Source project 
-		| developed by 
-		a(href='http://twitter.com/gravityonmars', target="_blank") Gravity On Mars.
+		| CodeKata.IO is an Angelhack project developed by Jason Goodwin, Bhavin Prajapati and Craig Mackenzie
 	script
 		$('#hide-inactive').click(function(ev) {
 			$('.room-list').toggleClass('hide-inactive');
