--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,12 @@ textarea {
     left: 0;
 }
 
+.answer {
+    position: relative;
+    width:100%;
+    height:400px;
+}
+
 body {
   margin: 0;
   font-size: 1em;
