--- a/views/themes/default/layout.jade
+++ b/views/themes/default/layout.jade
@@ -24,9 +24,11 @@ html(class="no-js", lang="en")
 		link(rel="stylesheet", href="https://s3.amazonaws.com/social-buttons/css/social-buttons.css")
 		link(rel="stylesheet", href="/js/libs/fancy-box/jquery.fancybox.css")
 		link(rel="stylesheet", href="/css/style.css")
+		link(rel="stylesheet", href="/css/bootstrap.css")
   
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
 		script(src="/js/libs/modernizr-2.5.3.min.js")
+		script(src="/js/bootstrap.js")
 
 	- var body_class = (("undefined" != typeof room) ? 'fancy-theme room' : 'home-page')
 	body(class=body_class)
