--- a/views/themes/default/room.jade
+++ b/views/themes/default/room.jade
@@ -66,8 +66,17 @@ block content
 							}
 
 			.chat-input
-				.button(margin='13px') Submit
+				a.btn(href="#myModal",role="button",data-toggle="modal",style='outline:none')
+					.button(margin='13px') Submit
 
+			.submit-modal
+				#myModal.modal.hide.fade(tabindex='-1',role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+					.modal-header
+						h3#myModalLabel Submittion Result
+					.modal-body
+						p
+					.modal-footer
+						button.btn(data-dismiss='modal',aria-hidden='true') Close
 	// .wrap
 
 	span#room_name(style="display:none")= room.name
