--- a/views/themes/default/index.jade
+++ b/views/themes/default/index.jade
@@ -12,7 +12,7 @@ block content
 		.login-box
 			.inner-padding
 				img.logo(src='img/logo.png', height='39', alt='Logo')
-				h3 Free & ready to go web chat room.
+				h3 Compete against developers online and build a solid reputation.
 				p
 					a#twitbutt.sb.sb-small.sb-twitter(href="/auth/twitter") 
 						i 
