--- a/views/themes/default/templates/chat_tmpl.jade
+++ b/views/themes/default/templates/chat_tmpl.jade
@@ -23,4 +23,4 @@ script#people_box(type='text/html')
     | {{ nickname }}
 
 script#title_template(type='text/html')
-  | {{#count}} ({{ count }}) {{/count}} {{ roomName }} - Balloons.IO
+  | {{#count}} ({{ count }}) {{/count}} {{ roomName }} - CodeKata.IO
