--- a/views/themes/default/room.jade
+++ b/views/themes/default/room.jade
@@ -4,6 +4,8 @@ block content
 	.color-line
 	.wrap
 		header
+			h1.logo
+				|code.kata.io
 			include status_dropdown
 			include rooms_dropdown
 			a.button-circle.invite.fancybox(href='#invite', style="display:none;")
