--- a/views/themes/default/room.jade
+++ b/views/themes/default/room.jade
@@ -71,7 +71,7 @@ block content
 			.submit-modal
 				#myModal.modal.hide.fade(tabindex='-1',role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
 					.modal-header
-						h3#myModalLabel Submittion Result
+						h3#myModalLabel Submission Result
 					.modal-body
 						p
 					.modal-footer
