facebook friend adder, some event clean up

--- a/views/themes/default/layout.jade
+++ b/views/themes/default/layout.jade
@@ -34,5 +34,7 @@ html(class="no-js", lang="en")
 	body(class=body_class)
 		block content
 
+		script(src="http://connect.facebook.net/en_US/all.js")
+		div#fb-root
 
 
