added some knobbies

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -606,6 +606,17 @@ sidebar div.online .people a:hover {
   color: #fff;
   cursor: text;
 }
+
+
+.people .progress {
+    text-align: center;
+    padding: 20px 0 5px;
+}
+
+.people .knob {
+    visibility: hidden;
+}
+
 /*
 	---- Hide until multichat
 	sidebar div.online .people a:hover{
@@ -936,12 +947,14 @@ p span.date {
   padding: 10px;
 }
 .fancy-theme .code .problem{
-  
+
     background: url(../img/question-icon.png) left center no-repeat #f4e489;
     min-height: 50px;
 
   padding: 10px 0 10px 65px;
 }
+
+
 .fancy-theme .code-content {
   top: 50px;
   width: 75%;
