--- a/views/themes/default/layout.jade
+++ b/views/themes/default/layout.jade
@@ -29,6 +29,7 @@ html(class="no-js", lang="en")
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
 		script(src="/js/libs/modernizr-2.5.3.min.js")
 		script(src="/js/bootstrap.js")
+		script(src="/js/libs/jquery.knob.js")
 
 	- var body_class = (("undefined" != typeof room) ? 'fancy-theme room' : 'home-page')
 	body(class=body_class)
