fixed knobbies when going from room to room

--- a/views/themes/default/room.jade
+++ b/views/themes/default/room.jade
@@ -91,7 +91,7 @@ block content
 	script(defer, src="/js/libs/ICanHaz.min.js")
 	script(src="/socket.io/socket.io.js")
 	script(src="/js/libs/ace-min/ace.js")
-	script(defer, src="/js/script.js")
+	script(src="/js/script.js")
 
 
 
